complete discount and place info section

--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
     <!-- here is header section -->
     <header>
 
+        <!-- here is banner section -->
 
         <section class="banner-section">
             <h3 class="banner-title">Happy New Year</h3>
             <h1 class="banner-heading">New Year Party Celebration</h1>
-
         </section>
+
+        <!-- finished banner section -->
+
     </header>
     <!-- finished header section -->
 
@@ -65,6 +68,20 @@
         </section>
 
         <!-- finished welcome section -->
+
+        <!-- here is place info section -->
+
+        <section class="place-container">
+            <h3 class="place-info"><span class="place-title">Place:</span> New Park Hotel</h3>
+            <h3 class="place-info"><span class="place-title">Date:</span> 31 December Night 2023</h3>
+            <h3 class="place-info"><span class="place-title">Time:</span> Evening 7.30 pm to 12.30 am</h3>
+
+            <button class="place-info-button">Join Now</button>
+        </section>
+
+        <!-- finished place info section -->
+
+
         
         
 
