finished best offer section

--- a/index.html
+++ b/index.html
@@ -81,6 +81,28 @@
 
         <!-- finished place info section -->
 
+        <!-- here is best offer section -->
+
+        <section class="best-offer-container">
+            <div class="offer-info-container">
+                <h3 class="offer-intro">NEW BEST OFFER</h3>
+                <h2 class="offer-title">Coming Soon</h2>
+                <p class="offer-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+
+            <div class="offer-image-container">
+                <img src="assets/ellipse-1.png" alt="photo" class="offer-image">
+            </div>
+
+            <div class="offer-time-container">
+                <h2 class="date">2024</h2>
+                <p class="time-description">Dolor sit amet aget consetur. Consequat eget constur thiuedn maecenas sed.</p>
+                <img src="assets/group-96.png" alt="year-greeting" class="time-image">
+            </div>
+        </section>
+
+        <!-- finished offer section -->
+
 
         
         
