complete holiday sale section

--- a/index.html
+++ b/index.html
@@ -103,6 +103,16 @@
 
         <!-- finished offer section -->
 
+        <!-- here is holiday sale section  -->
+
+        <section class="holiday-container">
+            <h5 class="holiday-section-intro">WHAT IS FUNCTIONAL</h5>
+            <h3 class="holiday-section-title"><span class="uncommon-title">Holidays</span> Sale 50%</h3>
+            <p class="holiday-section-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
+                molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+        </section>
+
+        <!-- complete holiday sale section -->
 
         
         
