finished shopping description section

--- a/index.html
+++ b/index.html
@@ -114,7 +114,15 @@
 
         <!-- complete holiday sale section -->
 
-        
+        <!-- here is shopping description section -->
+
+    <section class="shopping-container">
+        <h5 class="shopping-intro">THE BEST GIFTS</h5>
+        <h1 class="shopping-title">Our Awesome Portfolio</h1>
+        <p class="shopping-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+    </section>
+
+    <!-- finished shopping description section -->
         
 
     </main>
