finished shopping portfolio section

--- a/index.html
+++ b/index.html
@@ -123,6 +123,20 @@
     </section>
 
     <!-- finished shopping description section -->
+
+    <!-- here is shopping Portfolio section -->
+    <section class="portfolio-container">
+        <div class="portfolio-row">
+            <img src="assets/shopping-assets/yellow-bag.png" alt="yellow banner-heading" class="portfolio-item"><img src="assets/shopping-assets/black-bag.png" alt="black-bag" class="portfolio-item"><img src="assets/shopping-assets/red-heel.png" alt="red hell" class="portfolio-item">
+
+        </div>
+        <div class="portfolio-row">
+
+            <img src="assets/shopping-assets/white-heel.png" alt="white hell"><img src="assets/shopping-assets/glass.png" alt="glass"><img src="assets/shopping-assets/women bracelet.png" alt="bracelet">
+        </div>
+    </section>
+        
+    <!-- finished shopping Portfolio section  -->
         
 
     </main>
