--- a/index.html
+++ b/index.html
@@ -137,6 +137,27 @@
     </section>
         
     <!-- finished shopping Portfolio section  -->
+
+    <!-- here is subscribe section -->
+    <section class="subscribe-container">
+        <div class="subscribe-item">
+            <img src="assets/logo-assets/mail-icon.png" alt="mail icon" class="mail">
+        </div>
+        <div class="subscribe-item">
+            <h3 class="subscribe-title">Subscribe Newsletter</h3>
+        </div>
+        <div class="subscribe-item">
+            <p class="subscribe-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+        </div>
+        <div class="subscribe-item">
+            <div class="subscribe-option">
+                <input type="email" name="mail" id="mail-us" placeholder="user@gmail.com">
+                <input type="button" value="Subscribe" class="subscribe-button">
+            </div>
+        </div>
+    </section>
+
+    <!-- finished subscribe section  -->
         
 
     </main>
