--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <section class="welcome-section">
             <div class="gradient">
                 <h1 class="welcome-section-intro">Welcome to midnight party</h1>
-                <p class="welcome-section-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas
-                    sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <p class="welcome-section-description">Countdown at midnight. If you want to celebrate New Year with friends.
+                    Enjoy this festive time of the year with us. </p>
                 <button class="welcome-section-button">join now</button>
                 <img src="assets/year.png" alt="2024 image" class="welcome-section-image">
             </div>
