change text and add effect

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
         <section class="copyright-container">
             <h3 class="copyright">&copy; 2024, All Rights Reserved.</h3>
-            <h3 class="copyright">Unsubscribe</h3>
+           <button class="copyright">Unsubscribe</button>
         </section>
 
         <!-- finished copyright section -->
